add album covers and music

--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
     <link rel="stylesheet" href="output.css" />
   </head>
   <body>
-    <h1 class="text-8xl font-bold underline">Hello world!</h1>
+  
+  <div>
+  <i class="fa-solid fa-chevron-down" style="color: #ffffff;"></i>
+  <h1 class="text-8xl font-bold underline">Playing suggested song</h1>
+  <i class="fa-solid fa-ellipsis" style="color: #ffffff;"></i>
+  </div>
+
+  <div>
+  <img src="albumart/Aidan.jpg" alt="" class="rounded-xl">
+  </div>
+
 
     <i class="fa-solid fa-play"></i>
 
