--- a/index.html
+++ b/index.html
@@ -15,20 +15,44 @@
 
     <link rel="stylesheet" href="output.css" />
   </head>
-  <body>
-  
+  <body class="bg-gradient-to-b from-blue-500 to-blue-900 mx-10 ">
+  <div class="bg-red-900 flex center justify-content width">
   <div>
-  <i class="fa-solid fa-chevron-down" style="color: #ffffff;"></i>
-  <h1 class="text-8xl font-bold underline">Playing suggested song</h1>
-  <i class="fa-solid fa-ellipsis" style="color: #ffffff;"></i>
+  <button href=""><i class="fa-solid fa-chevron-down" style="color: #ffffff;"></i></button>
+  <h1 class=" font-bold text-white text-center">Playing suggested song</h1>
+  <button><i class="fa-solid fa-ellipsis" style="color: #ffffff;"></i></button>
   </div>
 
   <div>
   <img src="albumart/Aidan.jpg" alt="" class="rounded-xl">
   </div>
 
+  <div>
+  <h2>Title</h2>
+  <h2>Singer</h2>
+  <button><i class="fa-regular fa-circle-plus" style="color: #fcfcfc;"></i></button>
+  <button><i class="fa-regular fa-circle-minus" style="color: #ffffff;"></i></button>
+  </div>
 
-    <i class="fa-solid fa-play"></i>
+  <div>
+  <button><i class="fa-solid fa-forward-step" style="color: #ffffff;"></i></button>
+  <button><i class="fa-solid fa-circle-play" style="color: #ffffff;"></i></button>
+  <!-- <div><i class="fa-solid fa-circle-pause" style="color: #ffffff;"></i></div> -->
+  <button><i class="fa-solid fa-backward-step" style="color: #ffffff;"></i></button>
+  </div>
+  <div></div>
+  <button><i class="fa-solid fa-arrow-up-from-bracket" style="color: #ffffff;"></i></button>
+
+  <div>
+    <div>Lyrics</div>
+    <button><i class="fa-solid fa-arrow-up-from-bracket" style="color: #ffffff;"></i></button>
+    <button><i class="fa-solid fa-up-right-and-down-left-from-center" style="color: #ffffff;"></i></button>
+    <div></div>
+  </div>
+
+  </div>
+  
+    <!-- <i class="fa-solid fa-play"></i> -->
 
     <script src="main.js"></script>
   </body>
