--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Async Audio</title>
 
+     
+    <!-- Tailwind CSS CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -15,43 +22,55 @@
 
     <link rel="stylesheet" href="output.css" />
   </head>
-  <body class="bg-gradient-to-b from-blue-500 to-blue-900 mx-10 ">
-  <div class="bg-red-900 flex center justify-content width">
+  <body class="bg-gradient-to-b from-red-400 to-red-600 flex items-center justify-center h-screen text-center font-roboto" >
+  <div class="p-5 w-96 fit-content rounded-xl shadow-2xl">
   <div>
-  <button href=""><i class="fa-solid fa-chevron-down" style="color: #ffffff;"></i></button>
-  <h1 class=" font-bold text-white text-center">Playing suggested song</h1>
-  <button><i class="fa-solid fa-ellipsis" style="color: #ffffff;"></i></button>
+  <button class="relative top-6 text-2xl right-36">
+    <i class="fa-solid fa-chevron-down" style="color: #ffffff;"></i>
+  </button>
+  <h1 class="relative bottm-2 text-white text-xs text-center">Playing suggested song</h1>
+  <button class="relative bottom-6 text-3xl left-36">
+    <i class="fa-solid fa-ellipsis" style="color: #ffffff;"></i>
+  </button>
   </div>
 
-  <div>
-  <img src="albumart/Aidan.jpg" alt="" class="rounded-xl">
+  <div class="w-full h-56 mb-4">
+  <img src="albumart/salsa.jpg" alt="" class=" object-cover rounded-l">
   </div>
-
-  <div>
-  <h2>Title</h2>
-  <h2>Singer</h2>
-  <button><i class="fa-regular fa-circle-plus" style="color: #fcfcfc;"></i></button>
-  <button><i class="fa-regular fa-circle-minus" style="color: #ffffff;"></i></button>
+  <!-- 01Salsa_After-Work Party.mp3 -->
+  <div class="mt-36">
+  <h2 class="flex †ext-7xl font-bold text-white">Salsa After Work Party</h2>
+  <h2 class="flex opacity-60 text-white">Dee Yan-Key</h2>
   </div>
-
-  <div>
-  <button><i class="fa-solid fa-forward-step" style="color: #ffffff;"></i></button>
-  <button><i class="fa-solid fa-circle-play" style="color: #ffffff;"></i></button>
-  <!-- <div><i class="fa-solid fa-circle-pause" style="color: #ffffff;"></i></div> -->
-  <button><i class="fa-solid fa-backward-step" style="color: #ffffff;"></i></button>
-  </div>
+<!-- Play  -->
+  <div class="flex justify-center mx-auto ">
+   <button class="m-10 text-4xl">
+    <i class="fa-solid fa-backward-step" style="color: #ffffff;"></i>
+  </button>
+  <button class="text-6xl ">
+    <i class="fa-solid fa-circle-play" style="color: #ffffff;"></i>
+  </button>
+   <button class="m-10 text-4xl">
+    <i class="fa-solid fa-forward-step" style="color: #ffffff;"></i>
+  </button></div>
   <div></div>
-  <button><i class="fa-solid fa-arrow-up-from-bracket" style="color: #ffffff;"></i></button>
+  <button class="relative text-xl left-32">
+    <i class="fa-solid fa-arrow-up-from-bracket" style="color: #ffffff;"></i>
+  </button>
 
-  <div>
-    <div>Lyrics</div>
-    <button><i class="fa-solid fa-arrow-up-from-bracket" style="color: #ffffff;"></i></button>
-    <button><i class="fa-solid fa-up-right-and-down-left-from-center" style="color: #ffffff;"></i></button>
-    <div></div>
-  </div>
-
-  </div>
   
+  <!-- </div >
+  <div class="b p-5 w-96 rounded-xl shadow-2xl">
+    <div class="">Lyrics</div>
+    <button class=" ">
+      <i class="fa-solid fa-arrow-up-from-bracket" style="color: #ffffff;"></i>
+    </button>
+    <button class="">
+      <i class="fa-solid fa-up-right-and-down-left-from-center" style="color: #ffffff;"></i>
+    </button>
+    <div></div>
+  </div> -->
+
     <!-- <i class="fa-solid fa-play"></i> -->
 
     <script src="main.js"></script>
