done!!!! was missing a  ";"

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         <h2 class="flex †ext-7xl font-bold text-white" id="title"></h2>
         <h2 class="flex opacity-60 text-white"id="artist"></h2>
         <div class="progress-container" id="progress-container">
-          <div class="progress" id="progress"></div>
+          <div class="progress" id="progress "></div>
+          <!-- <div class="durTime"></div> -->
         </div>
       </div>
       
@@ -60,15 +61,15 @@
         <!-- Prev  -->
         <div id="prev" class="flex justify-center mx-auto action-btn">
           <button class="m-10 text-4xl">
-          <i class="fa-solid fa-backward-step" style="color: #ffffff;"></i>
+          <i class="fas fa-solid fa-backward-step" style="color: #ffffff;"></i>
         </button>
         <!-- Play  -->
         <button id="play" class="text-6xl action-btn action-btn-big">
-          <i class="fa-solid fa-circle-play" style="color: #ffffff;"></i>
+          <i class="fas fa-solid fa-circle-play" style="color: #ffffff;"></i>
         </button>
         <!-- Next  -->
         <button id="next" class="m-10 text-4xl action-btn">
-          <i class="fa-solid fa-forward-step" style="color: #ffffff;"></i>
+          <i class="fas fa-solid fa-forward-step" style="color: #ffffff;"></i>
         </button></div>
       </div>
     </section> 
